--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<title>poluição mata 9 milhões de pessoas por ano; África é a mais atingida</title>
+
+<title><strong><h1>poluição mata 9 milhões de pessoas por ano; África é a mais atingida</h1></strong></title>
 A poluição do ar por processos industriais, juntamente com a urbanização, levou a um aumento de 7% nas mortes relacionadas à poluição de 2015 a 2019. Desde 2000, o aumento nas mortes foi de 66%.
 
 
