--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<title><strong><h1>poluição mata 9 milhões de pessoas por ano; África é a mais atingida</h1></strong></title>
+<p><title><strong><h1>poluição mata 9 milhões de pessoas por ano; África é a mais atingida</h1></strong></title></p>
 A poluição do ar por processos industriais, juntamente com a urbanização, levou a um aumento de 7% nas mortes relacionadas à poluição de 2015 a 2019. Desde 2000, o aumento nas mortes foi de 66%.
 
 
@@ -7,5 +7,5 @@ A poluição – do ar, água e solo – continua a causar mais de 9 milhões de
 
 O número se mantém o mesmo desde 2015, apesar de uma queda nas mortes relacionadas à poluição doméstica no ar e na água, segundo a publicação.
 Os autores analisaram dados de 2019 do "Global Burden of Disease", um estudo em andamento da Universidade de Washington, nos Estados Unidos, que avalia a exposição geral à poluição e calcula o risco de mortalidade. 
-"Estamos sentados no caldeirão e queimando lentamente", disse Richard Fuller, coautor do estudo e chefe da organização sem fins lucrativos Pure Earth. Mas, disse Fuller, ao contrário das mudanças climáticas, malária ou HIV, "não temos nos concentrado muito na poluição ambiental".
+<p><strong>"Estamos sentados no caldeirão e queimando lentamente", disse Richard Fuller, coautor do estudo e chefe da organização sem fins lucrativos Pure Earth. Mas, disse Fuller, ao contrário das mudanças climáticas, malária ou HIV, "não temos nos concentrado muito na poluição ambiental".</strong></p>
 
