--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 A poluição do ar por processos industriais, juntamente com a urbanização, levou a um aumento de 7% nas mortes relacionadas à poluição de 2015 a 2019. Desde 2000, o aumento nas mortes foi de 66%.
 
 
-A poluição – do ar, água e solo – continua a causar mais de 9 milhões de mortes prematuras todo ano, aponta um levantamento divulgado na terça-feira (17), por cientistas de vários países, na revista " The Lancet Planetary Health".
+<p> poluição – do ar, água e solo – continua a causar mais de 9 milhões de mortes prematuras todo ano, aponta um levantamento divulgado na terça-feira (17), por cientistas de vários países, na revista " The Lancet Planetary Health".</p>
 
 O número se mantém o mesmo desde 2015, apesar de uma queda nas mortes relacionadas à poluição doméstica no ar e na água, segundo a publicação.
 Os autores analisaram dados de 2019 do "Global Burden of Disease", um estudo em andamento da Universidade de Washington, nos Estados Unidos, que avalia a exposição geral à poluição e calcula o risco de mortalidade. 
