--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <p><title><strong><h1>poluição mata 9 milhões de pessoas por ano; África é a mais atingida</h1></strong></title></p>
-A poluição do ar por processos industriais, juntamente com a urbanização, levou a um aumento de 7% nas mortes relacionadas à poluição de 2015 a 2019. Desde 2000, o aumento nas mortes foi de 66%.
+<strong>A poluição do ar por processos industriais, juntamente com a urbanização, levou a um aumento de 7% nas mortes relacionadas à poluição de 2015 a 2019. Desde 2000, o aumento nas mortes foi de 66%.</strong>
 
 
 <p> poluição – do ar, água e solo – continua a causar mais de 9 milhões de mortes prematuras todo ano, aponta um levantamento divulgado na terça-feira (17), por cientistas de vários países, na revista " The Lancet Planetary Health".</p>
